--- a/devgram/profiles/templates/profiles/myprofile.html
+++ b/devgram/profiles/templates/profiles/myprofile.html
@@ -5,28 +5,85 @@ my profile
 {% endblock title %}
 
 {% block content %}
-<h1>My profile: {{ profile }}</h1>
-<hr>
-<img src={{profile.avatar.url}}>
-<br>
-{{ profile.avatar.url }}
-<br>
-{{ profile.avatar }}
-<br>
-<hr>
-{{ profile.first_name }}
-<br>
-{{ profile.last_name }}
-<br>
-{{ profile.country }}
-<br>
-{{ profile.get_friends_no }}
-<br>
-<ul>
-{% for friend in profile.get_friends %}
-    <li>
-        {{friend}}
-    </li>
-{% endfor %}
-</ul>
+
+<!-- MODAL -->
+<div class="ui modal mymodal">
+  <i class="close icon"></i>
+  <div class="header">
+    Update your profile
+  </div>
+  <div class="image content">
+    <div class="ui medium image">
+      <img src="{{ profile.avatar.url }}">
+    </div>
+    <div class="description">
+      <div class="ui header">Provide some additional/newest info about you</div>
+      <form action="" method="post" class="ui form" enctype="multipart/form-data">
+          {% csrf_token %}
+          {{form.as_p}}
+      </form>
+    </div>
+  </div>
+  <div class="actions">
+    <button type="submit" class="ui positive right labeled icon button">
+      Update
+      <i class="checkmark icon"></i>
+    </button>
+      </form>
+  </div>
+</div>
+
+<div class="ui segment">
+    {% if confirm %}
+        <div class="ui green message">Your profile has been updated</div>
+    {% endif %}
+    <h3>my profile: {{ request.user }}</h3>
+    <div class="ui grid">
+        <div class="row">
+            <div class="six wide column">
+                <img class="ui medium rounded image" src={{ profile.avatar.url }}>
+                <div class="row mt-5">
+                    <button class="ui secondary button" id="modal-btn">Update your profile</button>
+                </div>
+            </div>
+            <div class="ten wide column">
+                <table class="ui table">
+                    <tbody>
+                        <tr>
+                            <td>username</td>
+                            <td>{{ profile.user }}</td>
+                        </tr>
+                        <tr>
+                            <td>first name</td>
+                            <td>{{ profile.first_name }}</td>
+                        </tr>
+                        <tr>
+                            <td>last name</td>
+                            <td>{{ profile.last_name }}</td>
+                        </tr>
+                        <tr>
+                            <td>bio</td>
+                            <td>{{ profile.bio }}</td>
+                        </tr>
+                        <tr>
+                            <td>number of friends</td>
+                            <td>{{ profile.get_friends_no }}</td>
+                        </tr>
+                        <tr>
+                            <td>number of friends</td>
+                            <td>
+                                <ul>
+                                    {% for friends in profile.get_friends %}
+                                    <li>{{ friends }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
