--- a/devgram/profiles/templates/profiles/myprofile.html
+++ b/devgram/profiles/templates/profiles/myprofile.html
@@ -10,26 +10,25 @@ my profile
 <div class="ui modal mymodal">
   <i class="close icon"></i>
   <div class="header">
-    Update your profile
+    Update your Profile
   </div>
   <div class="image content">
     <div class="ui medium image">
-      <img src="{{ profile.avatar.url }}">
+      <img src="{{profile.avatar.url}}">
     </div>
     <div class="description">
-      <div class="ui header">Provide some additional/newest info about you</div>
-      <form action="" method="post" class="ui form" enctype="multipart/form-data">
-          {% csrf_token %}
-          {{form.as_p}}
-      </form>
+      <div class="ui header">Provide some additional/newest info about you </div>
+     <form action="" method="POST" class="ui form" enctype='multipart/form-data'>
+        {% csrf_token %}
+        {{form.as_p}}
     </div>
   </div>
   <div class="actions">
-    <button type="submit" class="ui positive right labeled icon button">
+    <button type='submit' class="ui positive right labeled icon button">
       Update
       <i class="checkmark icon"></i>
     </button>
-      </form>
+    </form>
   </div>
 </div>
 
@@ -78,6 +77,18 @@ my profile
                                     {% endfor %}
                                 </ul>
                             </td>
+                        </tr>
+                        <tr>
+                            <td>number of posts</td>
+                            <td>{{ profile.get_posts_no }}</td>
+                        </tr>
+                        <tr>
+                            <td>number of likes given</td>
+                            <td>{{ profile.get_likes_given_no }}</td>
+                        </tr>
+                        <tr>
+                            <td>number of likes received</td>
+                            <td>{{ profile.get_likes_received_no }}</td>
                         </tr>
                     </tbody>
                 </table>
