Displaying comments and send post confirmation

--- a/devgram/posts/templates/posts/main.html
+++ b/devgram/posts/templates/posts/main.html
@@ -28,13 +28,31 @@ posts
                             &nbsp;{{ obj.num_likes }}
                         </form>
                     </div>
+                    <div>
+                        {% if obj.comment_set.all %}
+                            {% for c in obj.comment_set.all %}
+                                <p>{{c.body}}</p>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                    <form action="" method="POST" class="ui form">
+                        {% csrf_token %}
+                        <input type="hidden" name="post_id" value={{obj.id}}>
+                        {{c_form}}
+                        <button type="submit" class="ui primary button" name="submit_c_form"> comment </button>
+                    </form>
                 </div>
             {% endfor %}
         </div>
-         <div class="five wide column">
-
-             Form
-
+        <div class="five wide column">
+            {% if post_added %}
+                <div class="ui green message"> Post added</div>
+            {% endif %}
+            <form method="post" class="ui form" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{p_form}}
+                <button type="submit" class="ui button positive" name="submit_p_form">Send Post</button>
+            </form>
         </div>
     </div>
 </div>
