--- a/devgram/static_project/style.css
+++ b/devgram/static_project/style.css
@@ -20,3 +20,24 @@ body {
     top: 200px !important;
     font-size: 20px !important;
 }
+
+.mb-5 {
+    margin-bottom: 5px !important;
+}
+
+.w-big {
+    width: 200px !important;
+}
+
+.bwhite-lg {
+    background-color: transparent !important;
+}
+
+.bwhite-sm {
+    background-color: transparent !important;
+    width: 10px !important;
+}
+
+.comment-box {
+    display: none;
+}
