--- a/devgram/templates/main/navbar.html
+++ b/devgram/templates/main/navbar.html
@@ -49,11 +49,11 @@
                 {{ request.user }}
             </a>
 
-            <a href="" class="ui item">
+            <a href="{% url 'account_logout' %}" class="ui item">
                 Logout
             </a>
         {% else %}
-        <a href="" class="ui item">
+        <a href="{% url 'account_login' %}" class="ui item">
                 Login
             </a>
         {% endif %}
