Add API for statistics

--- a/devgram/templates/main/home.html
+++ b/devgram/templates/main/home.html
@@ -5,9 +5,9 @@ home
 {% endblock title %}
 
 {% block content %}
-{{ hello }}
-<br>
-{{ user }}
+
+<div class="ui centered header">{{ hello }} {{ user }} !</div>
+
 {% endblock content %}
 
 
